Refactored AWS SimpleQueueService integration to use serializer/deserializer of your choice by introducing ISerializerContext. Added two default implementation; one for Newtonsoft JSON and other for vanilla System.Text.Json.

--- a/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
+++ b/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Extend the Savvy I/O core assemblies with support for Newtonsoft JSON.</Description>
-    <PackageTags>json converters converter</PackageTags>
+    <PackageTags>newtonsoft json converters converter</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
