ALM and namespace alignment/consequence changes.

--- a/test/Savvyio.Domain.EventSourcing.Tests/Savvyio.Domain.EventSourcing.Tests.csproj
+++ b/test/Savvyio.Domain.EventSourcing.Tests/Savvyio.Domain.EventSourcing.Tests.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <RootNamespace>Savvyio.Domain.EventSourcing</RootNamespace>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Domain.EventSourcing\Savvyio.Domain.EventSourcing.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.csproj" />
