--- a/test/Savvyio.Extensions.EFCore.Tests/Savvyio.Extensions.EFCore.Tests.csproj
+++ b/test/Savvyio.Extensions.EFCore.Tests/Savvyio.Extensions.EFCore.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Savvyio.Extensions.Storage</RootNamespace>
+    <RootNamespace>Savvyio.Extensions.EFCore</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
