Exclude NETSDK1206 for unit test projects.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -53,7 +53,7 @@
     <SonarQubeExclude>true</SonarQubeExclude>
     <WarningLevel>0</WarningLevel>
     <AnalysisLevel>none</AnalysisLevel>
-    <NoWarn>NU1701</NoWarn>
+    <NoWarn>NU1701,NETSDK1206</NoWarn>
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
