--- a/test/Savvyio.Extensions.DependencyInjection.SimpleQueueService.Tests/Savvyio.Extensions.DependencyInjection.SimpleQueueService.Tests.csproj
+++ b/test/Savvyio.Extensions.DependencyInjection.SimpleQueueService.Tests/Savvyio.Extensions.DependencyInjection.SimpleQueueService.Tests.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.SimpleQueueService\Savvyio.Extensions.DependencyInjection.SimpleQueueService.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.Newtonsoft.Json\Savvyio.Extensions.Newtonsoft.Json.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.Text.Json\Savvyio.Extensions.Text.Json.csproj" />
   </ItemGroup>
 
   <ItemGroup>
