--- a/test/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.Tests/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.Tests.csproj
+++ b/test/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.Tests/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.Tests.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing\Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.Newtonsoft.Json\Savvyio.Extensions.Newtonsoft.Json.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.Text.Json\Savvyio.Extensions.Text.Json.csproj" />
     <ProjectReference Include="..\Savvyio.Assets.EfCore.Tests\Savvyio.Assets.EfCore.Tests.csproj" />
     <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
