--- a/.azure/jobs/deployment-development.yml
+++ b/.azure/jobs/deployment-development.yml
@@ -1,6 +1,6 @@
 ﻿jobs:
   - deployment: CD
-    displayName: 'Preview: release to private NuGet Feed'
+    displayName: 'Preview: release to public NuGet Feed'
     environment: 'Development'
     pool:
       ${{ if eq(parameters.selfHosted, 'true') }}:
