Added custom converter for SingleValueObject and complemented with unit tests. Also updated xmldoc as DocFx ignores <inheritdoc/> ..

--- a/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
+++ b/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.0.0" />
+    <PackageReference Include="Cuemon.Extensions.Reflection" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
