--- a/test/Savvyio.Extensions.Newtonsoft.Json.Tests/Savvyio.Extensions.Newtonsoft.Json.Tests.csproj
+++ b/test/Savvyio.Extensions.Newtonsoft.Json.Tests/Savvyio.Extensions.Newtonsoft.Json.Tests.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Cuemon.Extensions.IO" Version="8.0.0" />
     <PackageReference Include="Cuemon.Extensions.Newtonsoft.Json" Version="8.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
