Further refactoring and consistency alignment as related to 0e5aa6d50d35e6d8fd580dedfeaf86a22e31a772.

--- a/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
+++ b/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Core\Savvyio.Core.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection\Savvyio.Extensions.DependencyInjection.csproj" />
   </ItemGroup>
 
 </Project>
