--- a/src/Savvyio.Extensions.DependencyInjection/Savvyio.Extensions.DependencyInjection.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection/Savvyio.Extensions.DependencyInjection.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="8.1.0-preview.52" />
   </ItemGroup>
 
 </Project>
