--- a/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
+++ b/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.0.1" />
-    <PackageReference Include="Cuemon.Extensions.Reflection" Version="8.0.1" />
+    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.1.0-preview.52" />
+    <PackageReference Include="Cuemon.Extensions.Reflection" Version="8.1.0-preview.52" />
   </ItemGroup>
 
   <ItemGroup>
