--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -77,6 +77,6 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsTestProject)' == 'true'">
-    <PackageReference Include="Cuemon.Extensions.Xunit.App" Version="8.1.0-preview.52" />
+    <PackageReference Include="Cuemon.Extensions.Xunit.App" Version="8.1.0" />
   </ItemGroup>
 </Project>
