--- a/test/Savvyio.Assets.Tests/Savvyio.Assets.Tests.csproj
+++ b/test/Savvyio.Assets.Tests/Savvyio.Assets.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Security.Cryptography" Version="8.1.0-preview.52" />
+    <PackageReference Include="Cuemon.Security.Cryptography" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
