--- a/test/Savvyio.Extensions.Text.Json.Tests/Savvyio.Extensions.Text.Json.Tests.csproj
+++ b/test/Savvyio.Extensions.Text.Json.Tests/Savvyio.Extensions.Text.Json.Tests.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="8.1.0-preview.52" />
-    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.1.0-preview.52" />
+    <PackageReference Include="Cuemon.Extensions.IO" Version="8.1.0" />
+    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.1.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
