Limit dokcer-compose to Linux

--- a/.azure/steps/docker-compose-up.yml
+++ b/.azure/steps/docker-compose-up.yml
@@ -1,5 +1,6 @@
 ﻿steps:
   - task: DockerCompose@0
+    condition: eq(variables['Agent.OS'], 'Linux')
     displayName: 'Spin up LocalStack for unit/integration test'
     inputs:
       containerregistrytype: 'Container Registry'
