--- a/.azure/steps/docker-compose-down.yml
+++ b/.azure/steps/docker-compose-down.yml
@@ -1,5 +1,6 @@
 ﻿steps:
   - task: DockerCompose@0
+    condition: eq(variables['Agent.OS'], 'Linux')
     displayName: 'Take down LocalStack for unit/integration test'
     inputs:
       containerregistrytype: 'Container Registry'
