Try to install Docker for Windows support as well (as everything works locally)

--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -23,6 +23,7 @@
     - template: ../steps/download-snk.yml
     - template: ../steps/minverversion-override.yml
     - template: ../steps/restore.yml
+    - template: ../steps/docker-install.yml
     - template: ../steps/docker-compose-up.yml
     - template: ../steps/sonarcloud-prepare.yml
     - template: ../steps/build-net8_0.yml
