Have to exclude LocalStack unit-/functional test for now; too many problems on AzDO.

--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -23,14 +23,14 @@
     - template: ../steps/download-snk.yml
     - template: ../steps/minverversion-override.yml
     - template: ../steps/restore.yml
-    - template: ../steps/docker-install.yml
-    - template: ../steps/docker-compose-up.yml
+    #- template: ../steps/docker-install.yml
+    #- template: ../steps/docker-compose-up.yml
     - template: ../steps/sonarcloud-prepare.yml
     - template: ../steps/build-net8_0.yml
     - template: ../steps/unit-test.yml
     - template: ../steps/codecov-setup.yml
     - template: ../steps/sonarcloud-finalize.yml
-    - template: ../steps/docker-compose-down.yml
+    #- template: ../steps/docker-compose-down.yml
     - template: ../steps/publish-artifact.yml
 
   - job: BuildDotNet7_0
