:recycle: refactored concrete classes in the context of messaging to own assemblies

--- a/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
+++ b/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Domain\Savvyio.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Messaging\Savvyio.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
