--- a/src/Savvyio.EventDriven/Savvyio.EventDriven.csproj
+++ b/src/Savvyio.EventDriven/Savvyio.EventDriven.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Provides the fundamental classes and interfaces to work with the concepts of Integration Events that complements both CQRS (Command and Query Responsibility Segregation) and DDD (Domain Driven Design) for a distributed architecture.</Description>
-    <PackageTags>cqrs command-query-responsibility-segregation integration-event publish integration-event-handler messaging microservice microservices bus eventbus publisher subscriber pub sub integrationevent event</PackageTags>
+    <Description>Provides the fundamental classes and interfaces to work with the concepts of Integration Events that complements both CQRS (Command and Query Responsibility Segregation) and DDD (Domain Driven Design).</Description>
+    <PackageTags>cqrs command-query-responsibility-segregation integration-event publish integration-event-handler</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
