--- a/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
+++ b/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Savvyio.Core\Savvyio.Core.csproj" />
     <ProjectReference Include="..\Savvyio.Domain\Savvyio.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Messaging\Savvyio.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
