--- a/src/Savvyio.Commands.Messaging/Savvyio.Commands.Messaging.csproj
+++ b/src/Savvyio.Commands.Messaging/Savvyio.Commands.Messaging.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Provides options to scale out Commands using distributed subsystems.</Description>
+    <Description>Provides ways to scale out Commands using distributed subsystems.</Description>
     <PackageTags>command messaging microservice microservices bus commandqueue sender receiver</PackageTags>
   </PropertyGroup>
 
