--- a/src/Savvyio.EventDriven.Messaging/Savvyio.EventDriven.Messaging.csproj
+++ b/src/Savvyio.EventDriven.Messaging/Savvyio.EventDriven.Messaging.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Provides options to scale out Integration Events for a distributed architecture.</Description>
+    <Description>Provides ways to scale out Integration Events for a distributed architecture.</Description>
     <PackageTags>integrationevent event messaging microservice microservices bus eventbus publisher subscriber pub sub producer consumer</PackageTags>
   </PropertyGroup>
 
