--- a/src/Savvyio.Messaging/Savvyio.Messaging.csproj
+++ b/src/Savvyio.Messaging/Savvyio.Messaging.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Provides default implementations to work with Messaging in an efficient way.</Description>
-    <PackageTags>messaging asyncenumerable</PackageTags>
+    <Description>Provides the fundamental classes to work with Messaging in a distributed architecture.</Description>
+    <PackageTags>messaging signed acknowledgeable asyncenumerable asyncenumerator</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
