--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -91,6 +91,9 @@ jobs:
         configuration: [Debug, Release]
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Checkout
+        uses: codebeltnet/git-checkout@v1
+      
       - name: Install .NET
         uses: codebeltnet/install-dotnet@v1
 
