:recycle: refactored to new FunctionalTests while embrassing LocalStack even further using a custom Docker image

--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -127,6 +127,7 @@ jobs:
           AWS__CALLERIDENTITY: ${{ secrets.AWS_CALLER_IDENTITY }}
           AWS__IAM__ACCESSKEY: ${{ secrets.AWS_IAM_ACCESSKEY }}
           AWS__IAM__SECRETKEY: ${{ secrets.AWS_IAM_SECRETKEY }}
+          AWS__LOCALSTACK: ${{ secrets.AWS_LOCALSTACK }}
 
   sonarcloud:
     name: 🔬 Code Quality Analysis
