--- a/src/Savvyio.Core/Savvyio.Core.csproj
+++ b/src/Savvyio.Core/Savvyio.Core.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Security.Cryptography" Version="8.3.2" />
-    <PackageReference Include="Cuemon.Extensions.Core" Version="8.3.2" />
-    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="8.3.2" />
-    <PackageReference Include="Cuemon.Extensions.Reflection" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Security.Cryptography" Version="9.0.0-preview.4" />
+    <PackageReference Include="Cuemon.Extensions.Core" Version="9.0.0-preview.4" />
+    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="9.0.0-preview.4" />
+    <PackageReference Include="Cuemon.Extensions.Reflection" Version="9.0.0-preview.4" />
   </ItemGroup>
 
 </Project>
