--- a/src/Savvyio.Extensions.DependencyInjection/Savvyio.Extensions.DependencyInjection.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection/Savvyio.Extensions.DependencyInjection.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="9.0.0-preview.4" />
   </ItemGroup>
 
 </Project>
