--- a/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
+++ b/src/Savvyio.Extensions.EFCore/Savvyio.Extensions.EFCore.csproj
@@ -5,6 +5,10 @@
     <PackageTags>efcore entity-framework-core data-store dao data-access-object repository dbcontext</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net9'))">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.7.24405.3" />
+  </ItemGroup>
+
   <ItemGroup Condition="$(TargetFramework.StartsWith('net8'))">
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
