--- a/src/Savvyio.Extensions.QueueStorage/Savvyio.Extensions.QueueStorage.csproj
+++ b/src/Savvyio.Extensions.QueueStorage/Savvyio.Extensions.QueueStorage.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.25.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.19.1" />
-    <PackageReference Include="Cuemon.Extensions.IO" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.4" />
   </ItemGroup>
 
   <ItemGroup>
