--- a/src/Savvyio.Extensions.SimpleQueueService/Savvyio.Extensions.SimpleQueueService.csproj
+++ b/src/Savvyio.Extensions.SimpleQueueService/Savvyio.Extensions.SimpleQueueService.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.400.13" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.400.13" />
-    <PackageReference Include="Cuemon.Extensions.IO" Version="8.3.2" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.400.15" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.400.15" />
+    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.4" />
   </ItemGroup>
 
   <ItemGroup>
