--- a/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
+++ b/src/Savvyio.Extensions.Text.Json/Savvyio.Extensions.Text.Json.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Extensions.Text.Json" Version="9.0.0-preview.4" />
   </ItemGroup>
 
   <ItemGroup>
