--- a/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
+++ b/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.4" />
     <PackageReference Include="Xunit.Priority" Version="1.1.6" />
   </ItemGroup>
 
