--- a/test/Savvyio.Extensions.Text.Json.Tests/Savvyio.Extensions.Text.Json.Tests.csproj
+++ b/test/Savvyio.Extensions.Text.Json.Tests/Savvyio.Extensions.Text.Json.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.IO" Version="8.3.2" />
+    <PackageReference Include="Cuemon.Extensions.IO" Version="9.0.0-preview.4" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
