--- a/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
+++ b/src/Savvyio.Extensions.Newtonsoft.Json/Savvyio.Extensions.Newtonsoft.Json.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.Newtonsoft.Json" Version="9.0.0-preview.4" />
+    <PackageReference Include="Codebelt.Extensions.Newtonsoft.Json" Version="9.0.0-preview.2" />
   </ItemGroup>
 
   <ItemGroup>
