--- a/test/Savvyio.Assets.Dapper.Tests/Savvyio.Assets.Dapper.Tests.csproj
+++ b/test/Savvyio.Assets.Dapper.Tests/Savvyio.Assets.Dapper.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0-rc.1.24451.1" />
   </ItemGroup>
 
   <ItemGroup>
