--- a/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
+++ b/test/Savvyio.FunctionalTests/Savvyio.FunctionalTests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Codebelt.Extensions.YamlDotNet" Version="9.0.0-preview.3" />
     <PackageReference Include="Xunit.Priority" Version="1.1.6" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
